// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App layout snapshots > matches the desktop shell layout 1`] = `
<div>
  <div
    class="overlay-shell"
  >
    <header
      class="drag-zone"
      data-tauri-drag-region="true"
    >
      <div
        class="header-left"
      >
        <span
          class="brand"
        >
          FocusNook
        </span>
      </div>
      <div
        class="header-actions"
      >
        <button
          aria-label="Убрать с переднего плана"
          class="icon-button is-active"
          title="Убрать с переднего плана"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-pin"
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 17v5"
            />
            <path
              d="M9 10.76a2 2 0 0 1-1.11 1.79l-1.78.9A2 2 0 0 0 5 15.24V16a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-.76a2 2 0 0 0-1.11-1.79l-1.78-.9A2 2 0 0 1 15 10.76V7a1 1 0 0 1 1-1 2 2 0 0 0 0-4H8a2 2 0 0 0 0 4 1 1 0 0 1 1 1z"
            />
          </svg>
        </button>
        <button
          aria-label="Настройки"
          class="icon-button "
          title="Настройки"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-settings"
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915"
            />
            <circle
              cx="12"
              cy="12"
              r="3"
            />
          </svg>
        </button>
        <button
          aria-label="Закрыть"
          class="icon-button "
          title="Закрыть"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-x"
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
        </button>
      </div>
    </header>
    <nav
      class="tabs "
    >
      <button
        class="tab tab-active"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-calendar-days"
          fill="none"
          height="13"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="13"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
          <path
            d="M8 14h.01"
          />
          <path
            d="M12 14h.01"
          />
          <path
            d="M16 14h.01"
          />
          <path
            d="M8 18h.01"
          />
          <path
            d="M12 18h.01"
          />
          <path
            d="M16 18h.01"
          />
        </svg>
        <span>
          День
        </span>
      </button>
      <button
        class="tab "
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-notebook-pen"
          fill="none"
          height="13"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="13"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13.4 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-7.4"
          />
          <path
            d="M2 6h4"
          />
          <path
            d="M2 10h4"
          />
          <path
            d="M2 14h4"
          />
          <path
            d="M2 18h4"
          />
          <path
            d="M21.378 5.626a1 1 0 1 0-3.004-3.004l-5.01 5.012a2 2 0 0 0-.506.854l-.837 2.87a.5.5 0 0 0 .62.62l2.87-.837a2 2 0 0 0 .854-.506z"
          />
        </svg>
        <span>
          Заметки
        </span>
      </button>
      <button
        class="tab "
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-bell-ring"
          fill="none"
          height="13"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="13"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.268 21a2 2 0 0 0 3.464 0"
          />
          <path
            d="M22 8c0-2.3-.8-4.3-2-6"
          />
          <path
            d="M3.262 15.326A1 1 0 0 0 4 17h16a1 1 0 0 0 .74-1.673C19.41 13.956 18 12.499 18 8A6 6 0 0 0 6 8c0 4.499-1.411 5.956-2.738 7.326"
          />
          <path
            d="M4 2C2.8 3.7 2 5.7 2 8"
          />
        </svg>
        <span>
          Напоминания
        </span>
      </button>
    </nav>
    <main
      class="body"
    >
      <div
        class="tab-view day-shell"
      >
        <div
          class="day-header"
        >
          <div
            class="day-date-block"
          >
            <span
              class="day-date"
            >
              DATE_PLACEHOLDER
            </span>
            <span
              class="day-count"
            >
              0
              /
              0
            </span>
          </div>
          <div
            class="day-nav"
          >
            <button
              aria-label="Предыдущий день"
              class="icon-button"
              title="Предыдущий день"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-left"
                fill="none"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m15 18-6-6 6-6"
                />
              </svg>
            </button>
            <button
              aria-label="Открыть календарь"
              class="icon-button"
              title="Открыть календарь"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-calendar-days"
                fill="none"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 2v4"
                />
                <path
                  d="M16 2v4"
                />
                <rect
                  height="18"
                  rx="2"
                  width="18"
                  x="3"
                  y="4"
                />
                <path
                  d="M3 10h18"
                />
                <path
                  d="M8 14h.01"
                />
                <path
                  d="M12 14h.01"
                />
                <path
                  d="M16 14h.01"
                />
                <path
                  d="M8 18h.01"
                />
                <path
                  d="M12 18h.01"
                />
                <path
                  d="M16 18h.01"
                />
              </svg>
            </button>
            <button
              aria-label="Следующий день"
              class="icon-button"
              title="Следующий день"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-right"
                fill="none"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m9 18 6-6-6-6"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="empty-state"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-list-checks"
            fill="none"
            height="22"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="22"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13 5h8"
            />
            <path
              d="M13 12h8"
            />
            <path
              d="M13 19h8"
            />
            <path
              d="m3 17 2 2 4-4"
            />
            <path
              d="m3 7 2 2 4-4"
            />
          </svg>
          <span>
            На сегодня пока ничего не запланировано
          </span>
        </div>
        <form
          class="quick-add"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-plus"
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
          <input
            placeholder="Добавить дело..."
            value=""
          />
        </form>
      </div>
    </main>
  </div>
</div>
`;

exports[`App layout snapshots > matches the mobile shell layout 1`] = `
<div>
  <div
    class="overlay-shell mobile-shell"
  >
    <header
      class="mobile-topbar"
    >
      <span
        class="mobile-topbar-title"
      >
        День
      </span>
    </header>
    <main
      class="body"
    >
      <div
        class="tab-view day-shell"
      >
        <div
          class="day-header"
        >
          <div
            class="day-date-block"
          >
            <span
              class="day-date"
            >
              DATE_PLACEHOLDER
            </span>
            <span
              class="day-count"
            >
              0
              /
              0
            </span>
          </div>
          <div
            class="day-nav"
          >
            <button
              aria-label="Предыдущий день"
              class="icon-button"
              title="Предыдущий день"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-left"
                fill="none"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m15 18-6-6 6-6"
                />
              </svg>
            </button>
            <button
              aria-label="Открыть календарь"
              class="icon-button"
              title="Открыть календарь"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-calendar-days"
                fill="none"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 2v4"
                />
                <path
                  d="M16 2v4"
                />
                <rect
                  height="18"
                  rx="2"
                  width="18"
                  x="3"
                  y="4"
                />
                <path
                  d="M3 10h18"
                />
                <path
                  d="M8 14h.01"
                />
                <path
                  d="M12 14h.01"
                />
                <path
                  d="M16 14h.01"
                />
                <path
                  d="M8 18h.01"
                />
                <path
                  d="M12 18h.01"
                />
                <path
                  d="M16 18h.01"
                />
              </svg>
            </button>
            <button
              aria-label="Следующий день"
              class="icon-button"
              title="Следующий день"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-right"
                fill="none"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m9 18 6-6-6-6"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="empty-state"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-list-checks"
            fill="none"
            height="22"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="22"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13 5h8"
            />
            <path
              d="M13 12h8"
            />
            <path
              d="M13 19h8"
            />
            <path
              d="m3 17 2 2 4-4"
            />
            <path
              d="m3 7 2 2 4-4"
            />
          </svg>
          <span>
            На сегодня пока ничего не запланировано
          </span>
        </div>
        <form
          class="quick-add"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-plus"
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
          <input
            placeholder="Добавить дело..."
            value=""
          />
        </form>
      </div>
    </main>
    <nav
      class="tabs bottom-nav"
    >
      <button
        class="tab tab-active"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-calendar-days"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
          <path
            d="M8 14h.01"
          />
          <path
            d="M12 14h.01"
          />
          <path
            d="M16 14h.01"
          />
          <path
            d="M8 18h.01"
          />
          <path
            d="M12 18h.01"
          />
          <path
            d="M16 18h.01"
          />
        </svg>
        <span>
          День
        </span>
      </button>
      <button
        class="tab "
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-notebook-pen"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13.4 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-7.4"
          />
          <path
            d="M2 6h4"
          />
          <path
            d="M2 10h4"
          />
          <path
            d="M2 14h4"
          />
          <path
            d="M2 18h4"
          />
          <path
            d="M21.378 5.626a1 1 0 1 0-3.004-3.004l-5.01 5.012a2 2 0 0 0-.506.854l-.837 2.87a.5.5 0 0 0 .62.62l2.87-.837a2 2 0 0 0 .854-.506z"
          />
        </svg>
        <span>
          Заметки
        </span>
      </button>
      <button
        class="tab "
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-bell-ring"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.268 21a2 2 0 0 0 3.464 0"
          />
          <path
            d="M22 8c0-2.3-.8-4.3-2-6"
          />
          <path
            d="M3.262 15.326A1 1 0 0 0 4 17h16a1 1 0 0 0 .74-1.673C19.41 13.956 18 12.499 18 8A6 6 0 0 0 6 8c0 4.499-1.411 5.956-2.738 7.326"
          />
          <path
            d="M4 2C2.8 3.7 2 5.7 2 8"
          />
        </svg>
        <span>
          Напоминания
        </span>
      </button>
      <button
        class="tab "
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-settings"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
        <span>
          Настройки
        </span>
      </button>
    </nav>
  </div>
</div>
`;
